MoreRange.Builder